// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// buf breaking: ignore (does currently not require backward-compatibility)

syntax = "proto3";

import "compute-client/src/protocol/command.proto";
import "compute-client/src/protocol/response.proto";

package mz_compute_client.service;

service ProtoCompute {
    rpc CommandResponseStream (stream protocol.command.ProtoComputeCommand)
        returns (stream protocol.response.ProtoComputeResponse);
}
